--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
     <version.plugin.assembly>3.2.0</version.plugin.assembly>
     <version.plugin.compiler>3.8.1</version.plugin.compiler>
-    <version.plugin.surefire>3.0.0-M4</version.plugin.surefire>
+    <version.plugin.surefire>2.22.2</version.plugin.surefire> <!-- strangely surefire 3.0.0-M4 does not work with junit5 -->
   </properties>
 
   <dependencies>
