--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <version.jgit>5.7.0.202003110725-r</version.jgit>
     <version.junit>5.6.1</version.junit>
     <version.picocli>4.2.0</version.picocli>
+    <version.slf4j>1.7.30</version.slf4j>
 
     <version.plugin.assembly>3.2.0</version.plugin.assembly>
     <version.plugin.compiler>3.8.1</version.plugin.compiler>
@@ -45,6 +46,11 @@
       <artifactId>flogger-system-backend</artifactId>
       <version>${version.flogger}</version>
       <scope>runtime</scope>
+    </dependency>
+    <dependency>
+       <groupId>org.slf4j</groupId>
+       <artifactId>slf4j-simple</artifactId>
+       <version>${version.slf4j}</version> <!-- otherwise warnings are printed -->
     </dependency>
 
     <!-- TESTING -->
@@ -86,6 +92,8 @@
           <compilerArgs>
             <arg>-Aproject=${project.groupId}/${project.artifactId}</arg>
           </compilerArgs>
+          <source>14</source>
+          <target>14</target>
         </configuration>
       </plugin>
       <!-- create a fat jar with dependencies -->
