--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
+    <version.asciidoctor>2.1.0</version.asciidoctor>
     <version.flogger>0.5</version.flogger>
     <version.jgit>5.7.0.202003110725-r</version.jgit>
     <version.junit>5.6.1</version.junit>
@@ -35,6 +36,11 @@
       <groupId>org.eclipse.jgit</groupId>
       <artifactId>org.eclipse.jgit</artifactId>
       <version>${version.jgit}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.asciidoctor</groupId>
+      <artifactId>asciidoctorj</artifactId>
+      <version>${version.asciidoctor}</version>
     </dependency>
     <dependency>
       <groupId>com.google.flogger</groupId>
